Finished all explanatory parts of aura components

--- a/force-app/main/default/aura/BoardPanel/BoardPanel.cmp
+++ b/force-app/main/default/aura/BoardPanel/BoardPanel.cmp
@@ -1,28 +1,45 @@
-<aura:component implements="flexipage:availableForAllPageTypes">
+<aura:component implements="flexipage:availableForAllPageTypes" controller="BoardPanelController">
   <aura:attribute name="options" type="List" default="[
     {'label': 'Easy', 'value': 'easy'},
     {'label': 'Medium', 'value': 'medium'},
     {'label': 'Hard', 'value': 'hard'},
     ]" />
   <aura:attribute name="selectedGameMode" type="String" />
+  <aura:attribute name="reshuffleDisabled" type="Boolean" default="true" />
+
+  <!-- Handlers -->
+  <aura:handler event="c:ResultApplicationEvent" action="{!c.onResultHandler}" />
+
 
   <lightning:card title="Word Shuffle">
     <!-- Bound Expr -->
-    <p>Selected Game Mode: {!v.selectedGameMode}</p>
+    <!-- <p>Selected Game Mode: {!v.selectedGameMode}</p> -->
     <!-- Unbound Expr -->
-    <p>Selected Game Mode: {#v.selectedGameMode}</p>
-    <lightning:layout horizontalAlign="center">
+    <!-- <p>Selected Game Mode: {#v.selectedGameMode}</p> -->
+    <lightning:layout horizontalAlign="center" multipleRows="true">
       <lightning:layoutItem padding="around-small" size="3">
         <lightning:combobox aura:id="cmbGameMode" variant="label-hidden" name="gameMode" label="Game Mode"
-          value="{!v.selectedGameMode}" placeholder="Select Game Mode" options="{!v.options}" />
+          placeholder="Select Game Mode" options="{!v.options}" />
       </lightning:layoutItem>
       <lightning:layoutItem padding="around-small">
         <lightning:button aura:id="btnStartNewGame" variant="brand" label="Start New Game" title="Start New Game"
           onclick="{! c.handleStartNewGame}" />
       </lightning:layoutItem>
       <lightning:layoutItem padding="around-small">
-        <lightning:button aura:id="btnReshuffle" label="Reshuffle" title="Reshuffle" onclick="{! c.handleReshuffle }" />
+        <lightning:button aura:id="btnReshuffle" label="Reshuffle" title="Reshuffle" onclick="{! c.handleReshuffle }"
+          disabled="{!v.reshuffleDisabled}" />
       </lightning:layoutItem>
     </lightning:layout>
+    <lightning:layout>
+      <lightning:layoutItem padding="around-medium" flexibility="auto" class="slds-align_absolute-center">
+        <aura:if isTrue="{!(v.selectedGameMode != null)}">
+          <c.Board aura:id="boardCmp" gameMode="{!v.selectedGameMode}"></c.Board>
+          <aura:set attribute="else">
+            Start new game by selecting game mode.
+          </aura:set>
+        </aura:if>
+      </lightning:layoutItem>
+    </lightning:layout>
+
   </lightning:card>
 </aura:component>
