--- a/force-app/main/default/aura/Board/Board.cmp
+++ b/force-app/main/default/aura/Board/Board.cmp
@@ -1,13 +1,23 @@
 <aura:component implements="flexipage:availableForAllPageTypes">
   <!-- Attributes -->
-  <aura:attribute name="gameMode" type="String" default="medium" />
+  <aura:attribute name="gameMode" type="String" />
   <aura:attribute name="clickCount" type="Integer" default="0" access="private" />
-  <aura:attribute name="randomWord" type="String" />
-  <aura:attribute name="words" type="List" />
+  <aura:attribute name="randomWord" type="String" access="private" />
+  <aura:attribute name="words" type="List" access="private" />
   <aura:attribute name="blockSize" type="Integer" access="private" />
+  <aura:attribute name="result" type="String" />
+  <aura:attribute name="boardDisabled" type="Boolean" access="private" />
+
   <!-- Handlers -->
   <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
+  <!-- <aura:handler name="onBlockClick" event="c:BlockClickEvent" action="{!c.handleBlockClick}" /> -->
   <!-- <aura:handler name="render" value="{!this}" action="{!c.doRender}" /> -->
+
+  <!-- Aura method -->
+  <aura:method name="startNewGame" action="{! c.doInit}" description="Start a new game"> </aura:method>
+  <aura:method name="reshuffleBoard" action="{!c.reshuffleBoard}" description="Resshuffles the words in the board">
+  </aura:method>
+
   <div class="board">
     <lightning:layout>
       <lightning:layoutItem padding="around-small">
@@ -16,11 +26,25 @@
       <lightning:layoutItem padding="around-small">
         <p class="slds-text-heading_medium">Moves Left: {! (5 - v.clickCount)} </p>
       </lightning:layoutItem>
+      <lightning:layoutItem padding="around-small">
+        <b>
+          <aura:if isTrue="{!v.result == 'YOU WIN!'}">
+            <p class="slds-text-heading_medium slds-text-color_success">{! v.result}</p>
+            <aura:set attribute="else">
+              <p class="slds-text-heading_medium slds-text-color_error">{! v.result}</p>
+            </aura:set>
+          </aura:if>
+        </b>
+      </lightning:layoutItem>
     </lightning:layout>
+    <aura:if isTrue="{!v.boardDisabled}">
+      <div class="board-disabled">
+      </div>
+    </aura:if>
     <lightning:layout multipleRows="true">
       <aura:iteration items="{!v.words}" var="itemWord">
         <lightning:layoutItem padding="around-small" size="{! v.blockSize}">
-          {!itemWord}
+          <c:Block label="{!itemWord}" onBlockClick="{!c.handleBlockClick}" />
         </lightning:layoutItem>
       </aura:iteration>
     </lightning:layout>
