--- a/force-app/main/default/aura/Board/Board.css
+++ b/force-app/main/default/aura/Board/Board.css
@@ -2,8 +2,19 @@
   background: #f7fafc;
   border-radius: 3px;
   position: relative;
+  width: 100%;
 }
 .THIS .randomWord {
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.THIS .board-disabled {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: not-allowed;
 }
